--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "less": "^4.2.0",
     "mockjs": "^1.1.0",
     "prettier": "^3.1.0",
     "prettier-plugin-packagejson": "^2.4.7",
