--- a/package.json
+++ b/package.json
@@ -67,10 +67,13 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "less": "^4.2.0",
     "mockjs": "^1.1.0",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.1.0",
     "prettier-plugin-packagejson": "^2.4.7",
+    "stylelint": "^16.1.0",
+    "stylelint-config-recess-order": "^4.4.0",
+    "stylelint-scss": "^6.0.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.3.2",
     "unocss": "^0.58.0",
