--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build:weapp": "taro build --type weapp",
     "dev:h5": "npm run build:h5 -- --watch",
     "dev:weapp": "npm run build:weapp -- --watch",
-    "format": "prettier --cache --write .",
-    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx"
+    "lint:eslint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
+    "lint:prettier": "prettier --cache --write .",
+    "lint:style": "stylelint \"src/**/*.(scss|css)\" --fix"
   },
   "browserslist": [
     "last 3 versions",
@@ -73,6 +74,8 @@
     "prettier-plugin-packagejson": "^2.4.7",
     "stylelint": "^16.1.0",
     "stylelint-config-recess-order": "^4.4.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.0.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.3.2",
